# proxy-wasm-java-sdk

./: .gitignore  Makefile  README.md  pom.xml
.github/workflows/: ci.yaml  release.yml
docs/release-notes/: version-0.0.4.md
integration-tests/tomee/: README.md  pom.xml
proxy-wasm-java-host/: pom.xml
proxy-wasm-java-host/src/test/go-examples/: build.sh
proxy-wasm-java-host/src/test/rust-examples/envoy_filter_metadata/: Cargo.toml  README.md  main.wasm
proxy-wasm-jaxrs/: pom.xml
proxy-wasm-jaxrs-jersey/: pom.xml
proxy-wasm-jaxrs-quarkus/: pom.xml
proxy-wasm-jaxrs-quarkus-example/: pom.xml
proxy-wasm-quarkus-example/: pom.xml
quarkus-proxy-wasm-example/: pom.xml
quarkus-x-corazawaf-example/: pom.xml
quarkus-x-kuadrant-example/: pom.xml
src/test/cc-examples/on_request_headers/: Makefile  README.md  http.cc
src/test/go-examples/dispatch_call_on_tick/: README.md  main.wasm
src/test/go-examples/foreign_call_on_tick/: README.md  main.go  main.wasm
src/test/go-examples/helloworld/: README.md  main.wasm
src/test/go-examples/http_auth_random/: README.md  go.mod  main.go  main.wasm
src/test/go-examples/http_body/: README.md  main.go  main.wasm
src/test/go-examples/http_body_chunk/: README.md  go.mod
src/test/go-examples/http_headers/: README.md  go.mod  main.wasm
src/test/go-examples/http_routing/: README.md  go.mod  go.sum  main.go  main.wasm
src/test/go-examples/json_validation/: main.go
src/test/go-examples/metrics/: README.md  go.mod
src/test/go-examples/multiple_dispatches/: README.md  main.go  main.wasm
(+383 files in other folders)
